--- a/README
+++ b/README
@@ -1,9 +1,14 @@
-Personal vim files.  Pathogen/solarized based.  Bundles are not kept
-using git submodules yet, just using a update_bundles.rb script that
-I modified from Tammer Saleh (thanks!).
+Personal vim files.  Pathogen/solarized based.  Bundles are not kept using git
+submodules yet, just using a update_bundles.rb script that I modified from
+Tammer Saleh (thanks!).
 
 A few items I don't keep in sync.  Dr. Chip's align is ridiculously complex
 now, I am just keeping the old version that I have been using for years.
 
 I use snipMate a decent amount, and luckily the pathogen setup makes it easy to
 add my own snippets in the normal directories so they don't have to be merged.
+Solarized takes too much effort to keep up to date (I use mrxvt for which there
+is no port and it doesn't support #define).  
+
+Doxygen support I also have my own customizations.  I will probably stop using
+it in favor of simpler snippets.
